--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-dropdown": "^1.11.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.5"
   }
 }
